smithy-model/src/test/resources/software/amazon/smithy/model/loader/valid/expects-br.smithy
$version: "2" /// Ignore me

namespace com.example /// Doc comment on Foo

string Foo /// Doc comment on Bar

string Bar /// Doc comment on Baz

string Baz, /// Doc comment on Bam

string Bam,,,/// Dangling
