smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/mixins/invalid-statement-after-structure-name.smithy
// Parse error at line 5, column 15 near `Baz`: Expected: '{', but found 'B'
$version: "2"
namespace com.foo

structure Foo Baz {}
